Fixed grid gap

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -11,7 +11,7 @@
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, 282px);
-  grid-gap: 20px;
+  grid-gap: 20px 17px;
   justify-content: center;
   margin: 0 auto;
   padding: 0;
